log
Thu, Mar 20, 2025  6:06:16 PM: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
3f6cb15
do., 23 de mar. de 2025 20:16:14: 
 tests:  1|4
total_score: 10/70
53e58b0
do., 23 de mar. de 2025 21:20:04: 
 exercises.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:61:24: error: implicit declaration of function 'firts' [-Werror=implicit-function-declaration]
       suma += *(int *) firts(L);
                        ^~~~~
exercises.c: In function 'eliminaElementos':
exercises.c:77:10: error: implicit declaration of function 'firt' [-Werror=implicit-function-declaration]
    while(firt(L) != NULL){
          ^~~~
exercises.c:77:18: error: comparison between pointer and integer [-Werror]
    while(firt(L) != NULL){
                  ^~
exercises.c:80:10: error: expected '}' before 'else'
          else{
          ^~~~
exercises.c: At top level:
exercises.c:85:1: error: expected identifier or '(' before '}' token
 }
 ^
exercises.c: In function 'copia_pila':
exercises.c:95:11: error: unused variable 'aux' [-Werror=unused-variable]
    Stack *aux = create_stack();
           ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
faa94f9
do., 23 de mar. de 2025 21:20:41: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:61:24: error: implicit declaration of function 'firts' [-Werror=implicit-function-declaration]
       suma += *(int *) firts(L);
                        ^~~~~
exercises.c: In function 'eliminaElementos':
exercises.c:77:10: error: implicit declaration of function 'firt' [-Werror=implicit-function-declaration]
    while(firt(L) != NULL){
          ^~~~
exercises.c:77:18: error: comparison between pointer and integer [-Werror]
    while(firt(L) != NULL){
                  ^~
exercises.c:80:10: error: expected '}' before 'else'
          else{
          ^~~~
exercises.c: At top level:
exercises.c:85:1: error: expected identifier or '(' before '}' token
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
3081d80
do., 23 de mar. de 2025 21:21:26: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:61:24: error: implicit declaration of function 'firts' [-Werror=implicit-function-declaration]
       suma += *(int *) firts(L);
                        ^~~~~
exercises.c: In function 'eliminaElementos':
exercises.c:80:10: error: expected '}' before 'else'
          else{
          ^~~~
exercises.c: At top level:
exercises.c:85:1: error: expected identifier or '(' before '}' token
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
ef09730
do., 23 de mar. de 2025 21:22:04: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:80:10: error: expected '}' before 'else'
          else{
          ^~~~
exercises.c: At top level:
exercises.c:85:1: error: expected identifier or '(' before '}' token
 }
 ^
Compilation failed
f957310
do., 23 de mar. de 2025 21:23:50: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
c24646e
do., 23 de mar. de 2025 21:33:01: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:98:19: error: lvalue required as left operand of assignment
    while(top(aux) =! NULL){
                   ^
Compilation failed
ebfb5bf
do., 23 de mar. de 2025 21:33:14: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
ddd1e9b
do., 23 de mar. de 2025 21:34:12: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
d4dcdab
